b=499498 BadWindow errors on startup r=roc